--- a/.github/workflows/cmake-run.yml
+++ b/.github/workflows/cmake-run.yml
@@ -16,6 +16,11 @@ jobs:
 
     steps:
 
+    - name: Update packages
+      run: |
+        sudo apt-get update
+        sudo apt-get install -yq valgrind
+
     - name: Checkout repo
       uses: actions/checkout@v4
 
@@ -28,6 +33,16 @@ jobs:
         ctest
 
     - name: Results
+      run: |
+        cd ../build-class/Testing/Temporary
+        cat LastTest.log
+
+    - name: Valgrind Test
+      run: |
+        cd ../build-class
+        valgrind ./test_math
+
+    - name: Print Valgrind Results
       run: |
         cd ../build-class/Testing/Temporary
         cat LastTest.log
